[build-system]
requires = ["setuptools>=42", "wheel", "pybind11", "torch>=1.12"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_ans"
version = "0.1.1.post1"
description = "PyTorch extension for ANS-based compression (C++/CUDA)"
authors = [
    { name="worldlife", email="worldlife@sjtu.edu.cn" }
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.12",
    "pybind11"
]
readme = { file = "README.md", content-type = "text/markdown" }
license = { file="LICENSE" }