[build-system]
requires = ["setuptools>=42", "wheel", "pybind11", "torch>=1.10"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_ans"
version = "0.1.3"
description = "PyTorch extension for ANS-based compression (C++/CUDA)"
authors = [
    { name="worldlife", email="worldlife@sjtu.edu.cn" }
]
requires-python = ">=3.7"
dependencies = [
    "torch>=1.10",
    "pybind11"
]
readme = { file = "README.md", content-type = "text/markdown" }
license = { file="LICENSE" }

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-benchmark", "gcovr"]

[tool.pytest.ini_options]
# addopts = "--cov=torch_ans --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]
